fix: spacing adjustments

--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,13 @@ section {
     width: 240px;
     height: 240px;
     font-family: 'Caveat';
-    font-size: 18px;
+    font-size: 24px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     transform: rotate(2deg);
+} 
+
+ul {
+    margin: 15px 0;
 }
 
 .yellow {
@@ -56,6 +60,8 @@ main {
 
 h2 {
     text-align: center;
+    font-size: 30px;
+    margin: 10px 0;
 }
 
 
